--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,35 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec ts-node index.ts"
+    "start": "nodemon --exec babel-node src/index.js",
+    "lint": "eslint --ext .ts src/**/*",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ts-node": "^10.9.2"
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2",
+    "typescript-eslint-parser": "^22.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.6",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "eslint": "^8.56.0",
     "nodemon": "^3.0.2",
-    "typescript": "^5.3.3"
+    "prettier": "^3.1.1"
   }
 }
